--- a/templates/CustomColumnsOverride/apps.v1.deployments.yaml
+++ b/templates/CustomColumnsOverride/apps.v1.deployments.yaml
@@ -19,19 +19,49 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "D"
+            "title" "deployment"
+            "backgroundColor" "#004080"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "deployment-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .metadata.namespace
       name: Namespace
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .metadata.labels
       name: Labels
-      type: string
+      type: array
     - jsonPath: .spec.template.metadata.labels
       name: Pod Selector
-      type: string
-    - jsonPath: .status.conditions[?(@.type=="Available")].status
-      name: Status
-      type: string
+      type: array
+    - name: Status
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.statuses.deployment" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -63,16 +93,32 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "D"
+            "title" "deployment"
+            "backgroundColor" "#004080"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "deployment-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .metadata.labels
       name: Labels
-      type: string
+      type: array
     - jsonPath: .spec.template.metadata.labels
       name: Pod Selector
-      type: string
-    - jsonPath: .status.conditions[?(@.type=="Available")].status
-      name: Status
-      type: string
+      type: array
+    - name: Status
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.statuses.deployment" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
