--- a/templates/CustomColumnsOverride/batch.v1.jobs.yaml
+++ b/templates/CustomColumnsOverride/batch.v1.jobs.yaml
@@ -7,10 +7,39 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "J"
+            "title" "job"
+            "backgroundColor" "#004080"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "job-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .metadata.namespace
       name: Namespace
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .spec.manualSelector
       name: Manual selector
       type: string
@@ -29,6 +58,10 @@ spec:
     - jsonPath: .spec.suspend
       name: Suspend
       type: string
+    - name: Status
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.statuses.job" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -56,7 +89,22 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "J"
+            "title" "job"
+            "backgroundColor" "#004080"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "job-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .spec.manualSelector
       name: Manual selector
       type: string
@@ -75,6 +123,10 @@ spec:
     - jsonPath: .spec.suspend
       name: Suspend
       type: string
+    - name: Status
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.statuses.job" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -102,7 +154,22 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "J"
+            "title" "job"
+            "backgroundColor" "#004080"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "job-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .spec.manualSelector
       name: Manual selector
       type: string
@@ -124,6 +191,10 @@ spec:
     - jsonPath: .spec.startingDeadlineSeconds
       name: Starting deadline seconds
       type: string
+    - name: Status
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.statuses.job" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
