--- a/templates/CustomColumnsOverride/factory-status-conditions.yaml
+++ b/templates/CustomColumnsOverride/factory-status-conditions.yaml
@@ -10,7 +10,7 @@ spec:
       type: string
     - jsonPath: .status
       name: Status
-      type: string
+      type: bool
     - jsonPath: .lastTransitionTime
       name: Updated
       type: string
