--- a/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.clusterrolebindings.yaml
+++ b/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.clusterrolebindings.yaml
@@ -7,21 +7,32 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "CRB"
+            "title" "clusterrolebinding"
+            "backgroundColor" "#008bad"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "factory" "clusterrolebinding-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .roleRef.name
       name: Role ref
       type: string
     - jsonPath: .subjects[?(@.kind=="ServiceAccount")].name
       name: Service accounts
-      type: string
+      type: array
     - jsonPath: .subjects[?(@.kind=="User")].name
       name: Users
       type: array
     - jsonPath: .subjects[?(@.kind=="Group")].name
       name: Groups
-      type: array
-    - jsonPath: .metadata.namepase
-      name: Namespace
       type: array
     - jsonPath: .metadata.creationTimestamp
       name: Created
