--- a/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
+++ b/templates/CustomColumnsOverride/argocd/argoproj.io.v1alpha1.applications.yaml
@@ -8,10 +8,34 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.pod.icon" . | nindent 8}}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "pod-details"
+        ) | nindent 12 
+        }}
     - jsonPath: .metadata.namespace
       name: Namespace
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .status.sync.status
       name: Sync Status
       type: string
@@ -32,13 +56,7 @@ spec:
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
-  additionalPrinterColumnsTrimLengths:
-    - key: Name
-      value: 64
-    - key: Labels
-      value: 1
-    - key: Pod Selector
-      value: 1
+  additionalPrinterColumnsTrimLengths: []
   additionalPrinterColumnsUndefinedValues:
     - key: Name
       value: "-"
@@ -62,7 +80,17 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.pod.icon" . | nindent 8}}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "pod-details"
+        ) | nindent 12 
+        }}
     - jsonPath: .status.sync.status
       name: Sync Status
       type: string
@@ -83,13 +111,8 @@ spec:
           "req" ".metadata.creationTimestamp"
           ) | nindent 8
         }}
-  additionalPrinterColumnsTrimLengths:
-    - key: Name
-      value: 64
-    - key: Labels
-      value: 1
-    - key: Pod Selector
-      value: 1
+  additionalPrinterColumnsTrimLengths: []
+
   additionalPrinterColumnsUndefinedValues:
     - key: Name
       value: "-"
