--- a/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.rolebindings.yaml
+++ b/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.rolebindings.yaml
@@ -7,16 +7,45 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
-    - jsonPath: .metadata.namepase
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "RB"
+            "title" "rolebinding"
+            "backgroundColor" "#008bad"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "rolebinding-details"
+          ) | nindent 12 
+        }}
+    - jsonPath: .metadata.namespace
       name: Namespace
-      type: array
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .roleRef.name
       name: Role ref
       type: string
     - jsonPath: .subjects[?(@.kind=="ServiceAccount")].name
       name: Service accounts
-      type: string
+      type: array
     - jsonPath: .subjects[?(@.kind=="User")].name
       name: Users
       type: array
@@ -58,7 +87,22 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "RB"
+            "title" "rolebinding"
+            "backgroundColor" "#008bad"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "rolebinding-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .roleRef.name
       name: Role ref
       type: string
