--- a/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.roles.yaml
+++ b/templates/CustomColumnsOverride/rbac.authorization.k8s.io.v1.roles.yaml
@@ -7,10 +7,39 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
-    - jsonPath: .metadata.name
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "R"
+            "title" "role"
+            "backgroundColor" "#c46100"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "role-details"
+          ) | nindent 12 
+        }}
+    - jsonPath: .metadata.namespace
       name: Namespace
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -35,7 +64,22 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "R"
+            "title" "role"
+            "backgroundColor" "#c46100"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "role-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
