--- a/templates/CustomColumnsOverride/v1.nodes.yaml
+++ b/templates/CustomColumnsOverride/v1.nodes.yaml
@@ -2,7 +2,7 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomColumnsOverride
 metadata:
-  name: stock-cluster-rbac.authorization.k8s.io.v1.clusterroles
+  name: stock-cluster-v1.nodes
 spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
@@ -10,18 +10,22 @@ spec:
       type: factory
       customProps:
         {{ include "incloud-web-resources.icon" (dict
-            "text" "CR"
-            "title" "clusterrole"
-            "backgroundColor" "#c46100"
+            "text" "N"
+            "title" "node"
+            "backgroundColor" "#8476d1"
           )| nindent 8
         }}
         {{ include "incloud-web-resources.factory.linkblock" (dict
             "reqIndex" 0
             "type" "name"
             "jsonPath" ".metadata.name"
-            "factory" "clusterrole-details"
-          ) | nindent 12 
+            "factory" "node-details"
+          ) | nindent 12
         }}
+    - name: Status
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.factory.statuses.node" . | nindent 8 }}
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -33,4 +37,4 @@ spec:
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
-  id: stock-cluster-/rbac.authorization.k8s.io/v1/clusterroles
+  id: stock-cluster-/v1/nodes
