--- a/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
+++ b/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
@@ -7,13 +7,42 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "SA"
+            "title" "serviceaccount"
+            "backgroundColor" "#40199a"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "serviceaccount-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .metadata.namespace
       name: Namespace
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .secrets[*].name
       name: Secrets
-      type: string
+      type: array
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -43,10 +72,25 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "SA"
+            "title" "serviceaccount"
+            "backgroundColor" "#40199a"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "serviceaccount-details"
+        ) | nindent 12 
+        }}
     - jsonPath: .secrets
       name: Secrets
-      type: string
+      type: array
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
