--- a/templates/CustomColumnsOverride/v1.services.yaml
+++ b/templates/CustomColumnsOverride/v1.services.yaml
@@ -7,10 +7,39 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "S"
+            "title" "service"
+            "backgroundColor" "#6ca100"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "service-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .metadata.namespace
       name: Namespace
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "NS"
+            "title" "namespace"
+            "backgroundColor" "#1e4f18"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "namespace"
+            "jsonPath" ".metadata.namespace"
+            "factory" "namespace-details"
+          ) | nindent 12
+        }}
     - jsonPath: .spec.clusterIP
       name: ClusterIP
       type: string
@@ -19,10 +48,10 @@ spec:
       type: string
     - jsonPath: .metadata.labels
       name: Labels
-      type: string
+      type: array
     - jsonPath: .spec.selector
       name: Pod Selector
-      type: string
+      type: array
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
@@ -58,7 +87,22 @@ spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
-      type: string
+      type: factory
+      customProps:
+        {{ include "incloud-web-resources.icon" (dict
+            "text" "S"
+            "title" "service"
+            "backgroundColor" "#6ca100"
+          )| nindent 8
+        }}
+        {{ include "incloud-web-resources.factory.linkblock" (dict
+            "reqIndex" 0
+            "type" "name"
+            "jsonPath" ".metadata.name"
+            "namespace" "{reqsJsonPath[0]['.metadata.namespace']['-']}"
+            "factory" "service-details"
+          ) | nindent 12 
+        }}
     - jsonPath: .spec.clusterIP
       name: ClusterIP
       type: string
@@ -67,10 +111,10 @@ spec:
       type: string
     - jsonPath: .metadata.labels
       name: Labels
-      type: string
+      type: array
     - jsonPath: .spec.selector
       name: Pod Selector
-      type: string
+      type: array
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: factory
