--- a/templates/TableUriMapping/apps.v1.replicaset.yaml
+++ b/templates/TableUriMapping/apps.v1.replicaset.yaml
@@ -1,24 +1,24 @@
----
-apiVersion: front.in-cloud.io/v1alpha1
-kind: TableUriMapping
-metadata:
-  name: stock-cluster-apps.v1.replicasets
-spec:
-  keysToParse: ".metadata.name"
-  keysToParseSecond: ".metadata.namespace"
-  id: "stock-cluster-/apps/v1/replicasets"
-  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
+# ---
+# apiVersion: front.in-cloud.io/v1alpha1
+# kind: TableUriMapping
+# metadata:
+#   name: stock-cluster-apps.v1.replicasets
+# spec:
+#   keysToParse: ".metadata.name"
+#   keysToParseSecond: ".metadata.namespace"
+#   id: "stock-cluster-/apps/v1/replicasets"
+#   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
 
----
-apiVersion: front.in-cloud.io/v1alpha1
-kind: TableUriMapping
-metadata:
-  name: stock-namespace-apps.v1.replicasets
-spec:
-  keysToParse: ".metadata.name"
-  keysToParseSecond: ".metadata.namespace"
-  id: "stock-namespace-/apps/v1/replicasets"
-  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
+# ---
+# apiVersion: front.in-cloud.io/v1alpha1
+# kind: TableUriMapping
+# metadata:
+#   name: stock-namespace-apps.v1.replicasets
+# spec:
+#   keysToParse: ".metadata.name"
+#   keysToParseSecond: ".metadata.namespace"
+#   id: "stock-namespace-/apps/v1/replicasets"
+#   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
