--- a/templates/TableUriMapping/v1.pods.yaml
+++ b/templates/TableUriMapping/v1.pods.yaml
@@ -1,35 +1,35 @@
----
-apiVersion: front.in-cloud.io/v1alpha1
-kind: TableUriMapping
-metadata:
-  name: stock-cluster-pod-details
-spec:
-  keysToParse: ".metadata.name"
-  keysToParseSecond: ".metadata.namespace"
-  id: "stock-cluster-/v1/pods"
-  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/pod-details/~recordValue~"
+# ---
+# apiVersion: front.in-cloud.io/v1alpha1
+# kind: TableUriMapping
+# metadata:
+#   name: stock-cluster-pod-details
+# spec:
+#   keysToParse: ".metadata.name"
+#   keysToParseSecond: ".metadata.namespace"
+#   id: "stock-cluster-/v1/pods"
+#   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
----
-apiVersion: front.in-cloud.io/v1alpha1
-kind: TableUriMapping
-metadata:
-  name: stock-namespace-pod-details
-spec:
-  keysToParse: ".metadata.name"
-  keysToParseSecond: ".metadata.namespace"
-  id: "stock-namespace-/v1/pods"
-  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/pod-details/~recordValue~"
+# ---
+# apiVersion: front.in-cloud.io/v1alpha1
+# kind: TableUriMapping
+# metadata:
+#   name: stock-namespace-pod-details
+# spec:
+#   keysToParse: ".metadata.name"
+#   keysToParseSecond: ".metadata.namespace"
+#   id: "stock-namespace-/v1/pods"
+#   pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
----
-apiVersion: front.in-cloud.io/v1alpha1
-kind: TableUriMapping
-metadata:
-  name: factory-node-details-table-pods
-spec:
-  keysToParse: ".metadata.name"
-  keysToParseSecond: ".metadata.namespace"
-  id: "factory-node-details-/v1/pods"
-  pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/pod-details/~recordValue~"
+# ---
+# apiVersion: front.in-cloud.io/v1alpha1
+# kind: TableUriMapping
+# metadata:
+#   name: factory-node-details-table-pods
+# spec:
+#   keysToParse: ".metadata.name"
+#   keysToParseSecond: ".metadata.namespace"
+#   id: "factory-node-details-/v1/pods"
+#   pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/pod-details/~recordValue~"
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
